# borg_the_spire

./: .gitignore  Cargo.toml  README.md  borg_the_spire_watch_and_communicate.py
benches/: slimes.rs
data/: competitors_sandbox.json  condition_strategy_generators_only.json  default_components.json  fractal_only.json  hexaghost.json  slimes_benchmark.json
scripts/: borg_the_spire_watch_and_communicate.py  convert_monsters.py  rebuild_on_windows.py
src/: actions.rs  ai_utils.rs  analysis_flows.rs  benchmarks.rs  communication_mod_state.rs  competing_optimizers.rs  condition_strategy.rs  condition_strategy_generators.rs  cow.rs  interface.rs  lib.rs  main.rs  mcts.rs  neural_net_ai.rs  representative_sampling.rs  sandbox.rs  seed_system.rs  seeds_concrete.rs  simulation.rs  simulation_state.rs  start_and_strategy_ai.rs  watch.rs
src/commands/: communicate.rs  interface.rs  sandbox.rs  watch.rs
src/simulation_state/: cards.rs  monsters.rs  powers.rs
src/simulation_state/monsters/: city.rs  exordium.rs
src/webserver/: html_views.rs  mod.rs  rocket_glue.rs
static/: index.html
