[package]
name = "borg_the_spire"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
rand = "0.7"
rand_xoshiro = "0.4"
ordered-float = "1.0"
arrayvec = { version = "0.4", features = ["serde-1"]}
smallvec = { version = "0.6", features = ["serde"]}
retain_mut = "0.1.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"]}
typed-html = { git = "https://github.com/bodil/typed-html/", version = "0.2.2" }
parking_lot = "0.9"
derivative = "2.2.0"
enum-map = "0.6.2"
array_ext = "0.2.0"

[profile.dev]
opt-level = 3
