[package]
name = "borg_the_spire"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
rand = "0.8.4"
rand_pcg = {version = "0.3.0", features = ["serde1"]}
rand_chacha = "0.3.1"
seahash = "4.1.0"
ordered-float = { version="1.0", features = ["serde"]}
arrayvec = { version = "0.7.1", features = ["serde"]}
smallvec = { version = "1.6.1", features = ["serde","union"]}
retain_mut = "0.1.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"]}
typed-html = { git = "https://github.com/bodil/typed-html/", version = "0.2.2" }
parking_lot = "0.11.1"
derivative = "2.2.0"
enum-map = "0.6.4"
array_ext = "0.2.0"
clap = "2.33.3"
scopeguard = "1.1.0"
difference = "2.0.0"

[dev-dependencies]
criterion = "0.3"

[profile.dev]
opt-level = 3

[lib]
name = "borg_the_spire"
path = "src/lib.rs"

[[bin]]
name = "borg_the_spire"
path = "src/main.rs"

[[bench]]
name = "slimes"
harness = false
